--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .sidebar {
-  flex: 0 0 200px;
+  flex: 0 0 15rem;
   background-color: #666;
 }
 
@@ -21,36 +21,48 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding: 0 1rem;
 }
 
 .chatbot-header {
-  padding: 10px;
+  padding: 1rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 1000px;
+  max-width: 64rem;
   margin: 0 auto;
 }
 
 .chatbot-body {
   flex: 1;
-  overflow-y: auto;
+  overflow-y: scroll;
+}
+
+.chatbot-body > div {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100%;
+}
+
+.chatbot-spacer {
+  flex: 1 1 auto;
 }
 
 .chatbot-messages {
   width: 100%;
-  max-width: 1000px;
+  max-width: 64rem;
   display: flex;
   flex-direction: column;
   align-items: end;
   justify-content: flex-end;
-  gap: 10px;
+  gap: 2rem;
   margin: 0 auto;
+  padding: 0 0.3rem;
 }
 
 .chatbot-message {
-  border-radius: 10px;
   width: 100%;
 }
 
@@ -61,20 +73,46 @@
 }
 
 .chatbot-form {
-  padding: 10px 0;
+  padding: 1rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 1000px;
-  gap: 10px;
+  max-width: 64rem;
+  gap: 1rem;
   margin: auto;
 
   & > textarea {
     flex: 1;
     resize: none;
-    border-radius: 10px;
+    border-radius: 0.6rem;
     font-size: 1rem;
     outline: none;
+  }
+
+  & > button {
+    width: 6rem;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    & > .spinner {
+      width: 1.1rem;
+      height: 1.1rem;
+      border: 0.15rem solid transparent;
+      border-top-color: white;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+    &:disabled {
+      cursor: progress;
+      border-color: transparent;
+    }
+  }
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
   }
 }
