--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -39,12 +41,13 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-weight: 700;
+  margin: 0.5em 0;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 1.2em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -80,14 +83,31 @@ input:focus {
 }
 
 pre {
-  font-family: Consolas, monospace;
-  font-size: 1.3em;
+  font-family: 'Fira Code', Consolas, monospace;
+  font-size: 1em;
   line-height: 1.5;
   overflow-x: auto;
-  padding: 1em;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem 0 1rem;
   border-radius: 8px;
   background-color: #1d1d1d;
   color: #d1d1d1;
+
+  & > code {
+    font-size: 1em;
+    line-height: 1.5;
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    color: inherit;
+  }
+}
+code {
+  font-family: 'Fira Code', Consolas, monospace;
+  background-color: #1d1d1d;
+  color: #aaa;
+  padding: 0.1em 0.3em;
+  border-radius: 4px;
 }
 
 @media (prefers-color-scheme: light) {
